# SmartBookingSystem

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt  run_fx_dashboard.sh  setup_fx_dashboard.sh  vercel.json
app/: config.py  db.py  emailer.py  engine.py  main.py  models.py  schemas.py  table_assignment.py
app/static/: app.js  index.html  styles.css
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
fx-dashboard/: README.md  app.js  index.html  styles.css
quant-pipeline/: Makefile  README.md  pyproject.toml
quant-pipeline/conf/base/: catalog.yml  parameters.yml
quant-pipeline/docs/: OPEN_SOURCE_STACK.md
quant-pipeline/scripts/: profile_with_magic_trace.sh  run_kedro_viz.sh
quant-pipeline/src/quant_pipeline/: __init__.py  pipeline_registry.py  settings.py
quant-pipeline/src/quant_pipeline/api/: __init__.py  app.py
quant-pipeline/src/quant_pipeline/models/: timesfm_adapter.py
quant-pipeline/src/quant_pipeline/pipelines/data/: nodes.py  pipeline.py
quant-pipeline/src/quant_pipeline/pipelines/signals/: __init__.py  nodes.py  pipeline.py
quant-pipeline/src/quant_pipeline/tools/: __init__.py  summary.py
scripts/: smoke_test.py
