[project]
name = "smart-booking-system"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.36",
    "pydantic==2.9.2",
    "jinja2==3.1.4",
    "python-multipart==0.0.9",
    "apscheduler==3.10.4",
    "email-validator==2.2.0",
    "httpx==0.28.1",
    "psycopg2-binary>=2.9",
]
