[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-pipeline"
version = "0.1.0"
description = "Kedro-style multi-asset quant research pipeline with optional TimesFM adapter."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "kedro>=0.19.10,<0.20",
  "kedro-viz>=11,<12",
  "kedro-datasets[pandas]>=5.1.0,<6",
  "numpy>=1.26,<2.1",
  "pandas>=2.2,<2.3",
  "httpx>=0.27,<0.28",
  "fastapi>=0.115,<1",
  "pydantic>=2.8,<3",
  "PyYAML>=6.0,<7",
  "uvicorn>=0.30,<0.35",
]

[project.optional-dependencies]
forecast = [
  "timesfm[torch]>=1.3.0",
]

[project.scripts]
quant-pipeline-summary = "quant_pipeline.tools.summary:main"
quant-pipeline-api = "quant_pipeline.api.app:app"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.kedro]
package_name = "quant_pipeline"
project_name = "quant-pipeline"
kedro_init_version = "0.19.10"

[tool.kedro_telemetry]
project_id = "2006c381960e4085bdc4d8b5db820ddd"
